Fixed lab1
